test_known_unknown/fails/not_correct_5/error.txt
warning[P1004]: File "not_correct_5.circom" does not include pragma version. Assuming pragma version (2, 2, 0)
 = At the beginning of file "not_correct_5.circom", you should add the directive "pragma circom <Version>", to indicate which compiler version you are using.

error[T20460]: Typing error found
   ┌─ "not_correct_5.circom":16:14
   │
16 │    var array[x];
   │              ^ The length of every array must be known during the constraint generation phase

previous errors were found
